<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgrepeat"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="234dp"
            android:layout_height="45dp"
            android:background="@color/lightblue"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/favorites"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@color/yellow"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/map"
                android:textColor="@color/black"
                android:onClick="onMapClick"
                android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/no_favorites" />



</LinearLayout>