<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/findNowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:onClick="onFindNowButtonClick"
                android:text="@string/find_now" />

          
        </TableRow>
        <TextView
            android:id="@+id/numberOfPeopleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/numberOfPeopleSlider"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="19"
            android:progress="0" />
    </TableLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/pickDate"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|left"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pickDate"
            android:layout_alignParentTop="true"
            android:text="DATE"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondaryNoDisable" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/pickStartTime"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="bottom|left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/startTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/pickStartTime"
                android:layout_alignParentTop="true"
                android:text="FROM"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondaryNoDisable" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/pickEndTime"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="bottom|left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/endTimeDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/pickEndTime"
                android:layout_alignParentTop="true"
                android:text="TO"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondaryNoDisable" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="?android:attr/textColorSecondaryNoDisable"
        android:textAppearance="?android:attr/textAppearanceSmall" /> 

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/privateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_check_box" />

            <CheckBox
                android:id="@+id/whiteboardCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whiteboard_check_box" />

            <CheckBox
                android:id="@+id/computerCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer_check_box" />

            <CheckBox
                android:id="@+id/projectorCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projector_check_box" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/engibox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="5dp"
                    android:antialias="true"
                    android:src="@drawable/engiicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="5dp"
                    android:text="ngineering"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/whartonbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="5dp"
                    android:antialias="true"
                    android:src="@drawable/whartonicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="5dp"
                    android:text="harton"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/libbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="5dp"
                    android:antialias="true"
                    android:src="@drawable/libicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="5dp"
                    android:text="ibrary"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/otherbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="serif" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="5dp"
                    android:antialias="true"
                    android:src="@drawable/othericon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="5dp"
                    android:text="thers"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/searchButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:onClick="onSearchButtonClick"
            android:text="@string/search_button" />
    </RelativeLayout>

</LinearLayout>