<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/spacename"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/lightblue"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/favoriteCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/spacename"
                    android:button="@drawable/btn_star_favorites" />
            </RelativeLayout>

            <TextView
                android:id="@+id/roomtype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/roomnumbers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/maxoccupancy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/private_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/privacy"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/whiteboard_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/whiteboard"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/computer_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/computer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgrey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/projector_icon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/projector"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgrey" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/reservetype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/availablenow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="AVAILABLE NOW"
            android:textColor="@color/lightblue"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/addCal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onCalClick"
                android:padding="10dp"
                android:text="@string/add_calendar"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reserve"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onReserveClick"
                android:padding="10dp"
                android:text="@string/add_reserve"
                android:textSize="20sp" />
            
            <Button
            android:id="@+id/shareButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="onShareClick"
            android:text="@string/add_share_text"
            android:textSize="20sp" />
        </LinearLayout>

        
    </LinearLayout>

</ScrollView>